src/objects/RestraintReportTemp__c.object
<CustomObject>
    <description>Temporary table and can be deleted once the &apos;Restraint Report&apos; Legacy data import is complete</description>
    <fields>
        <fullName>Injured_Residents_Minor_Injury__c</fullName>
        <label>Injured Residents (Minor Injury)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Injured_Residents_Serious_Injury__c</fullName>
        <label>Injured Residents (Serious Injury)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Injured_Staff_Minor_Injury__c</fullName>
        <label>Injured Staff (Minor Injury)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Injured_Staff_Serious_Injury__c</fullName>
        <label>Injured Staff (Serious Injury)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Restraints_Leading_to_Res_Injury__c</fullName>
        <label>No. Restraints Leading to Res. Injury</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Restraints_Leading_to_Staff_Injury__c</fullName>
        <label>No. Restraints Leading to Staff Injury</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProgramId__c</fullName>
        <label>ProgramId</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RestraintId__c</fullName>
        <label>RestraintId</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RestraintRecordType__c</fullName>
        <label>RestraintRecordType</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RestraintYear__c</fullName>
        <label>RestraintYear</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Restraint_Count__c</fullName>
        <label>Restraint Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Restraint_Method__c</fullName>
        <label>Restraint Method</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Restraint_Position_Time__c</fullName>
        <label>Restraint Position Time</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Restraint_Quarter__c</fullName>
        <label>Restraint Quarter</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_By__c</fullName>
        <label>Submitted By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Bed_Days_Utilized_this_Quarter__c</fullName>
        <label>Total Bed Days Utilized this Quarter</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unduplicated_Count_of_Residents_Restr__c</fullName>
        <label>Unduplicated Count of Residents Restrain</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unduplicated_Count_of_Residents_Served__c</fullName>
        <label>Unduplicated Count of Residents Served</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>RestraintReportTemp</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>RestraintReportTempId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RestraintReportTemp</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>